--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,8 @@
   nav {
     width: 100%;
     position: relative;
-    z-index: 50;
+   
+   
   }
   
   nav .container {
@@ -24,36 +25,40 @@
     justify-content: space-between;
     height: 6rem;
     align-items: center;
+    
   }
   
   .logo {
-    width: 80px;
+    width: 50px;
     display: flex;
     align-items: center;
   }
   
   .links ul {
     display: flex;
+    
   }
   
   .links a {
     display: inline-block;
     padding: 0.9rem 1.2rem;
-    color: var(--main-color);
+    color: white;
     font-size: 1.05rem;
     text-transform: uppercase;
     font-weight: 500;
     line-height: 1;
     transition: 0.3s;
+    text-decoration: none;
   }
   
   .links a.active {
-    background-color: var(--main-color);
-    color: var(--light-one);
+    background-color: white;
+    color: white;
     border-radius: 2rem;
     font-size: 1rem;
     padding: 0.9rem 2.1rem;
     margin-left: 1rem;
+    
   }
   
   .links a:hover {
@@ -295,171 +300,19 @@
   }
   /* Footer */
 
-.footer {
-    background-color:rgb(21, 20, 20);
-    padding: 1rem 0;
-   
+  footer {
+    background: #0b0d17;
+    margin-top: 130px;
   }
-  
-  .footer .grid-4 {
-    display: grid;
-    grid-template-columns: 3.5fr 2fr 2fr 3fr;
-  }
-  
-  .grid-4-col {
-    padding: 0 1.7rem;
-  }
-  
-  .footer .title-sm {
-    color: white;
-    margin-bottom: 0.9rem;
-  }
-  
-  .footer .text {
-    color: whitesmoke;
-  }
-  
-  .footer-links a {
-    color: rgb(197, 190, 190);
-    font-size: 1.25rem;
-    display: inline-block;
-    margin-bottom: 0.4rem;
-    transition: 0.3s;
-  }
-  
-  .footer-links a:hover {
-    color: var(--main-color);
-  }
-  
-  .footer-input-wrap {
-    display: grid;
-    grid-template-columns: auto 50px;
-    width: 100%;
-    height: 50px;
-    border-radius: 30px;
-    overflow: hidden;
-    margin-top: 1.2rem;
-  }
-  
-  .footer-input {
-    background: whitesmoke;
-    color: #333;
-    outline: none;
-    border: none;
-    padding: 0 1.5rem;
-    font-size: 1.1rem;
-    transition: 0.3s;
-  }
-  
-  .input-arrow {
-    color: whitesmoke;
-    background-color: var(--main-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.45rem;
-    transition: 0.3s;
-  }
-  
-  .input-arrow:hover {
-    background-color: #d1b01a;
-  }
-  
-  .focus {
-    background: #fff;
-  }
-  
-  .bottom-footer {
-    margin-top: 5.5rem;
-    padding: 0 1.7rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .copyright .text {
-    color: #bab3b3;
-    font-size: 1.2rem;
-    display: inline-block;
+  .footer_ending {
     text-align: center;
   }
-  
-  .copyright .text span {
-    color: white;
-    cursor: pointer;
+  .footer_ending img {
+    width: 158px;
+    margin-top: 43px;
+    margin-bottom: 24px;
   }
-  
-  .followme-wrap {
-    display: flex;
+  .footer_ending p {
+    color: #d9dbe1;
+    padding-bottom: 24px;
   }
-  
-  .followme {
-    display: flex;
-    align-items: center;
-  }
-  
-  .followme h3 {
-    color: #bab3b3;
-    font-weight: 500;
-    font-size: 1.3rem;
-  }
-  
-  .followme .footer-line {
-    width: 60px;
-    height: 2px;
-    background-color:#bab3b3 ;
-    margin: 0 1.2rem;
-    display: inline-block;
-  }
-  
-  .social-media a {
-    color: var(--main-color);
-    font-size: 1.3rem;
-    margin-right: 0.4rem;
-    transition: 0.3s;
-  }
-  
-  .social-media a:hover {
-    color: #d1b01a;
-  }
-  
-  .back-btn-wrap {
-    position: relative;
-    margin-left: 2.5rem;
-  }
-  
-  .back-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 55px;
-    width: 55px;
-    background-color: var(--main-color);
-    border-radius: 50%;
-    color: #fff;
-    font-size: 1.2rem;
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.15);
-    transition: 0.3s;
-    position: relative;
-    z-index: 2;
-  }
-  
-  .back-btn:hover {
-    background-color: #d1b01a;
-  }
-  
-  .back-btn-wrap:before {
-    content: "";
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    background-color: #fff;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.7);
-    border-radius: 50%;
-    opacity: 0.08;
-    animation: scale 1.2s ease-out infinite 1s;
-  }
-  
